--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 /notebooks/.ipynb_checkpoints/speed_map-checkpoint.ipynb
 /notebooks/.ipynb_checkpoints/data_from_MSSQL_to_PostgreSQL-checkpoint.ipynb
 /notebooks/authentication.py
+/.idea/codeStyles/codeStyleConfig.xml
